philz-customer-v2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: philz-customer-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: philz-customer
  replicas: 1 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: philz-customer
    spec:
      containers:
      - name: philz-customer
        image: {docker username}/philz-customer
