philz-customer-v2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: philz-customer-service 
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080 
  selector:
    name: philz-customer
