philz-customer-v2/kong-ingress-rule.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: philz-customer
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /api/user
        backend:
          serviceName:philz-customer-service
          servicePort: 80
